# serde-hkx

crates/havok_types/: Cargo.toml
