[package]
name = "havok_types"
description = "Havok Behavior basic types"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Your Name <your@email.com>"]
repository = "https://github.com/youruser/havok_types"
categories = [
    "data-structures",
    "serialization",
    "game-development",
]
keywords = ["havok", "types", "serde", "game", "behavior"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexical = { workspace = true }
parse-display = { workspace = true }               # Display derive
schemars = { workspace = true, optional = true }
serde = { workspace = true, optional = true }      # Implement (De)Serializer
serde_with = { workspace = true, optional = true }
static_assertions = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true } # To make diffs color and easy to read on test
serde_json = { workspace = true }        # To read and write Json files

[features]
default = []
json_schema = ["schemars"]
serde-support = ["serde", "serde_with"]


[lints]
workspace = true
